--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
   <script src="davi.js"></script>
+  <style>
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    #pieChart {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      width: 960px;
+      height: 500px;
+      position: relative;
+    }
+
+    polyline{
+      opacity: .3;
+      stroke: black;
+      stroke-width: 2px;
+      fill: none;
+    }
+  </style>
 </head>
 <body>
   <div id="pieChart">
